test/classes/initializers/paramInHeader2.good
paramInHeader2.chpl:4: In initializer:
paramInHeader2.chpl:5: error: The param field 'SOME_CONST' is not yet instantiated
